--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body{ /*Alinhando tudo que está no  Body*/
     font-size: 60px; /*tamanho da fonte*/
     margin: 5px; /*margem dos elementos que estão fora do conteúdo*/
     cursor: pointer; /*tipo da seta do mouse*/
-    color: #eee; /*cor do texto*/
+    color: rgb(83, 58, 58); /*cor do texto*/
 
 }
 
@@ -26,4 +26,34 @@ button{
     height: 30px;
     background: #eee;
     cursor:pointer;
+}
+
+.flip-container{
+    width: 50px;
+    height: 50px;
+    perspective: 1000px;
+    
+}
+
+.flipper{
+    width: 100%;
+    height: 100%;
+    transform-style: preserve-3d;
+    transition: transform 0.8s;
+    position: relative;
+}
+
+.front, .back{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+}
+
+.flip-container:hover .flipper{
+    transform: rotateY(180deg);
+}
+
+.back {
+    transform:rotateY(180deg) ;
 }
