--- a/css/style.css
+++ b/css/style.css
@@ -28,32 +28,29 @@ button{
     cursor:pointer;
 }
 
-.flip-container{
-    width: 50px;
-    height: 50px;
-    perspective: 1000px;
-    
-}
+.container{
+    width: 600px;
+    height: 100px;
+    background: white;
+    display: flow-root;
+    margin: 30px 450px;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+ 
 
-.flipper{
-    width: 100%;
-    height: 100%;
-    transform-style: preserve-3d;
-    transition: transform 0.8s;
-    position: relative;
 }
-
-.front, .back{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    backface-visibility: hidden;
-}
-
-.flip-container:hover .flipper{
-    transform: rotateY(180deg);
-}
-
-.back {
-    transform:rotateY(180deg) ;
+.box{
+    font-size: 28px;
+    text-decoration: wheat ;
+    width: 400px;
+    height: 55px;
+    margin: 0px 95px;
+    background: gray;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
